# omega-Y

./: .gitignore  CMakeLists.txt  README.md  build.sh
data/fonts/: Cantarell.desc  DejaVuSans.desc
data/shaders/: common.glsl  custom-mesh.frag  custom-mesh.vert  mesh-custom.frag  mesh-custom.vert  mesh-texture.frag  mesh.vert  picture.frag  postprocess.frag  posuv.vert  shape2d.vert  shape3d.vert  skybox.frag  skybox.vert  terrain-preview.frag  terrain-preview.vert  terrain.frag  terrain.vert  text.vert  underwater.glsl  util.vert  uvmap.frag  water-surface.glsl  water.frag  water.vert  watercut.geom
data/ui/: lobbyMenu.sodl  sessionSetupHostMenu.sodl
inspiration/: nice terrain examples.url
inspiration/terrainTex/: net-resources.txt
prototyping/: refract.html  refract1.html  sessionSetupHostMenuLayout.ui  trapez.html
prototyping/GUI_test/: CMakeLists.txt  build.sh
prototyping/SODL/: .gitignore  CMakeLists.txt  SODL-specs.txt  build.sh  nppp-custLang-SODL.xml  sessionSetupHostMenuLayout.sodl  sessionSetupHostMenuLayout.ui  test.sodl  test2.sodl
src/: CustomRenderContext.h  ImgDebugDraw.cpp  ImgDebugDraw.h  PlayerInputHandler.cpp  PlayerInputHandler.h  ResourceManager.cpp  ResourceManager.h  main.cpp  progress.h
src/BSP/: BSP-compute.h  BSP-impl.h  BSP.h  BSPDebugDraw-impl.h  BSPDebugDraw.h
src/GUI/: HostEntry.cpp  HostEntry.h  HostMultiPlayerMenu.cpp  HostMultiPlayerMenu.h  InGameMenu.cpp  InGameMenu.h  JoinMultiPlayerMenu.cpp  JoinMultiPlayerMenu.h  LoadingScreen.cpp  LoadingScreen.h  LobbyMenu.cpp  LobbyMenu.h  MainMenu.cpp  MainMenu.h  SessionSetupClientMenu.cpp  SessionSetupClientMenu.h  SessionSetupHostMenu.cpp  SessionSetupHostMenu.h  SinglePlayerMenu.cpp  SinglePlayerMenu.h  VerticalMenu.cpp  VerticalMenu.h
src/Vegetation/: VegetationGenerator.cpp  VegetationGenerator.h
src/buildings/: BuildingGenerator.cpp  BuildingGenerator.h
src/entities/: FreeCamera.cpp  FreeCamera.h  IUserControllable.h  PlayerEntity.cpp  PlayerEntity.h  enttypes.h
src/game/: Game.cpp  Game.h  GameConfig.h  GameCtrl.cpp  GameCtrl.h  GameState.cpp  GameState.h  LoadingCtrl.cpp  LoadingCtrl.h  LobbyCtrl.cpp  LobbyCtrl.h  MainMenuCtrl.cpp  MainMenuCtrl.h  Session.cpp  Session.h  SessionConfig.h  SessionSetupClientCtrl.cpp  SessionSetupClientCtrl.h  SessionSetupHostCtrl.cpp  SessionSetupHostCtrl.h  StateController.cpp  StateController.h
src/imgUtil/: blur.h  blur.private.h
src/net/: ConnectionWrapper.cpp  ConnectionWrapper.h  NetAdapter.h  NetClient.cpp  NetClient.h  NetHost.cpp  NetHost.h  architecture.txt  handshake.h
src/physics/: CollisionChecker.cpp  CollisionChecker.h  DebugDrawer.cpp  DebugDrawer.h  PhysBodyMeta.h  PhysBodyProxy.cpp  PhysBodyProxy.h  math.h
src/render/: CustomMeshRenderer.cpp  CustomMeshRenderer.h  CustomRenderContext.cpp  CustomRenderContext.h  OffscreenRenderer.cpp  OffscreenRenderer.h  ShaderProgram.h  ShaderProgramManager.cpp  ShaderProgramManager.h  UniformPack.cpp  UniformPack.h  UniformPackProxy.h  frustum.cpp  frustum.h  render.cpp  render.h
src/session/: session.cpp  session.h
src/sky/: SkyBox.cpp  SkyBox.h
src/sodl/: GUI_SODL_OBJ_Factory.cpp  ISODL_Object.cpp  ISODL_Object.h  SODL-specs.txt  SODL_common.h  SODL_loader.cpp  SODL_loader.h  SODL_loader_private.h
(+100 files in other folders)
